--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <tr>
                                 <th><kbd>No Tugas</kbd> </th>
                                 <th><kbd>Nama File</kbd> </th>
-                                <th ><kbd>Jumlah File</kbd></th>
+                                <th ><kbd>Isi</kbd></th>
                                 <th><kbd>Action</kbd></th>
                             </tr>
                         </thead>
@@ -59,7 +59,7 @@
                             <tr>
                                 <td>Tugas ke-1</td>
                                 <td>Tugas1-Sistem Informasi Geografis.docx</td>
-                                <td>1 file(.docx)</td>
+                                <td>Belajar Javascript(daftar type data, nama fungsi dan kelompoknya, dan<br>cara membuat fungsi dalam Javascript).</td>
                                 <td>
                                     <a href="#" class="btn btn-warning btn-xs" disabled="disabled"><span class="glyphicon glyphicon-play-circle"></span> Run</a>     
                                     <a href="#" class="btn btn-danger btn-xs" disabled="disabled"><span class="glyphicon glyphicon-search"></span> Source Code </a>
@@ -69,7 +69,7 @@
                             <tr >
                                 <td>Tugas ke-2</td>
                                 <td>Tugas2SIG.html</td>
-                                <td>1 file(.html)</td>
+                                <td>Menampilkan peta dengan koordinat tengah tempat dimana user berada.<br>Level zoom 18 dengan dilengkapi 4 button untuk mengubah type peta.</td>
                                 <td>
                                     <a  target="_blank" href="https://l200140026.github.io/Tugas2SIG.html" class="btn btn-warning btn-xs"><span class="glyphicon glyphicon-play-circle" ></span> Run</a>     
                                     <a  target="_blank" href="https://github.com/L200140026/L200140026.github.io/blob/master/Tugas2SIG.html" class="btn btn-danger btn-xs" ><span class="glyphicon glyphicon-search"></span> Source Code </a>
@@ -79,11 +79,41 @@
                             <tr >
                                 <td>Tugas ke-3</td>
                                 <td>Tugas3SIG.html</td>
-                                <td>1 file(.html)</td>
+                                <td>Membuat peta wilayah UMS, dan membuat polygon per-fakultas.<br>Dilengkapi juga untuk mengganti 4 tipe peta</td>
                                 <td>
                                     <a target="_blank" href="https://l200140026.github.io/Tugas3SIG.html" class="btn btn-warning btn-xs"><span class="glyphicon glyphicon-play-circle" ></span> Run</a>     
                                     <a target="_blank" href="https://github.com/L200140026/L200140026.github.io/blob/master/Tugas3SIG.html" class="btn btn-danger btn-xs" ><span class="glyphicon glyphicon-search"></span> Source Code </a>
                                     <a href="https://drive.google.com/uc?export=download&id=0B7Eqj2z32tKTV25rRHFLQkNwOGc" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-download "></span> Download</a>
+                                </td>
+                            </tr>
+                             <tr >
+                                <td>Tugas ke-4</td>
+                                <td>Tugas4SIG.html</td>
+                                <td>Membuaat garis Polyline dan animasi perjalanan</td>
+                                <td>
+                                    <a  target="_blank" href="https://l200140026.github.io/Tugas4SIG.html" class="btn btn-warning btn-xs"><span class="glyphicon glyphicon-play-circle" ></span> Run</a>     
+                                    <a  target="_blank" href="https://github.com/L200140026/L200140026.github.io/blob/master/Tugas4SIG.html" class="btn btn-danger btn-xs" ><span class="glyphicon glyphicon-search"></span> Source Code </a>
+                                    <a href="https://drive.google.com/uc?export=download&id=0B7Eqj2z32tKTZkhrNmQzUkNSVkU" class="btn btn-success btn-xs" ><span class="glyphicon glyphicon-download "></span> Download</a>
+                                </td>
+                            </tr>
+                            <tr >
+                                <td>Tugas ke-5</td>
+                                <td>Upload Google Street View</td>
+                                <td>Hasil Upload Foto Google Street View(Silahkan Run)</td>
+                                <td>
+                                    <a  target="_blank" href="https://www.google.com/maps/contrib/101371445428561304747/photos/@-7.5573883,110.7718935,3a,75y,197.71h,110.23t/data=!3m8!1e1!3m6!1s-Erxi4o8y0Zc%2FWSVgfcjRrfI%2FAAAAAAAABCg%2F0lxQC1KcHjk5MrNtutZ4MPr88sTk7jq8gCLIB!2e4!3e12!6s%2F%2Flh5.googleusercontent.com%2F-Erxi4o8y0Zc%2FWSVgfcjRrfI%2FAAAAAAAABCg%2F0lxQC1KcHjk5MrNtutZ4MPr88sTk7jq8gCLIB%2Fw203-h100-p-k-no-pi-2.9999962-ya138.5-ro0-fo100%2F!7i4608!8i2304!4m3!8m2!3m1!1e1" class="btn btn-warning btn-xs"><span class="glyphicon glyphicon-play-circle" ></span> Run</a>     
+                                    <a  target="_blank" href="#" class="btn btn-danger btn-xs" disabled="disabled"><span class="glyphicon glyphicon-search"></span> Source Code </a>
+                                    <a href="#" class="btn btn-success btn-xs" disabled="disabled" ><span class="glyphicon glyphicon-download "></span> Download</a>
+                                </td>
+                            </tr>
+                            <tr >
+                                <td>Tugas ke-6</td>
+                                <td>Tugas6SIG.html</td>
+                                <td>Program mencari alamat, koordinat, jarak, rute, membuat street view,<br> dan menghitung ketinggian(Elevasi) </td>
+                                <td>
+                                    <a  target="_blank" href="https://l200140026.github.io/Tugas6SIG.html" class="btn btn-warning btn-xs"><span class="glyphicon glyphicon-play-circle" ></span> Run</a>     
+                                    <a  target="_blank" href="https://github.com/L200140026/L200140026.github.io/blob/master/Tugas6SIG.html" class="btn btn-danger btn-xs" ><span class="glyphicon glyphicon-search"></span> Source Code </a>
+                                    <a href="https://drive.google.com/uc?export=download&id=0B7Eqj2z32tKTel92dDBTcjlkUlE" class="btn btn-success btn-xs" ><span class="glyphicon glyphicon-download "></span> Download</a>
                                 </td>
                             </tr>
                         </tbody>
